--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "js-tiktoken": "^1.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
