--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "token-llm-cost-calculator",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "test": "vitest run",
+    "test:smoke": "vitest run tests/e2e/smoke.e2e.test.tsx",
+    "prices:update": "node scripts/update-prices.mjs",
+    "prices:validate": "node scripts/validate-prices.mjs",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "js-tiktoken": "^1.0.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -26,6 +32,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "jsdom": "^26.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
